@@ -3,6 +3,7 @@
 	- do macro expansion before %if processing
 	- dep ordering returns w/ an error as soon as a prereq loop is found
 	- autoreqprov flag was being ignored during builds
+	- add autoreq: and autoprov:
 
 2.4.108 -> 2.4.109:
         - remove icons with --rmsource
